Made pagination module wider to prevent wrapping

--- a/public/stylesheets/multitask/general.css
+++ b/public/stylesheets/multitask/general.css
@@ -228,7 +228,7 @@ input.btn_gris{width:130px;height:28px;background:url(/images/multitask/bg_eleme
 .followers_list .follower_data li{float:left;padding-right:10px;}
 
 /* paginacion */
-.paginacion{width:360px;margin:20px auto;clear:both;}
+.paginacion{width:416px;margin:20px auto;clear:both;}
 .paginacion li{text-align:center;margin:0 1px;display:block;float:left;}
 .paginacion li.res{display:block;width:30px;height:12px;padding:6px 0;}
 .paginacion li a{display:block;width:30px;height:12px;padding:6px 0;color:#ff0000;font-size:1.2em;background:url(/images/multitask/iconografia.png) no-repeat 0 -206px;}
